syntax = "proto3";

package transaction;

option go_package = "pb/transaction";

service TransactionService {
    rpc CreateTransaction(CreateTransactionRequest) returns (CreateTransactionResponse) {}
}

message CreateTransactionRequest {
    string post_id = 1;
    float amount = 2;
    string account_number = 3;
    string account_name = 4; 
    bool hide_name = 5;
}

message CreateTransactionResponse {
    string transaction_id = 1;
    string user_id = 2;
    string payment_id = 3;
    float amount = 4;
    string account_number = 5;
    string account_name = 6;
    string payment_url = 7;
    string status = 8;
}